# libcppdebounce

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  annotated.html  classDebounce-members.html  classDebounce.html  classThrottle-members.html  classThrottle.html  classes.html  debounce_8hpp.html  debounce_8hpp__incl.map  debounce_8hpp__incl.md5  debounce_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d71d53504112be61438f465259fde40c.html  dir_d71d53504112be61438f465259fde40c_dep.map  dir_d71d53504112be61438f465259fde40c_dep.md5  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  structDebounce_1_1DebounceOperation-members.html  structDebounce_1_1DebounceOperation.html  structThrottle_1_1ThrottleOperation-members.html  structThrottle_1_1ThrottleOperation.html  throttle_8hpp.html  throttle_8hpp__incl.map  throttle_8hpp__incl.md5  throttle_8hpp_source.html
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile
example/: CMakeLists.txt  debounce_example.cpp  throttle_example.cpp
include/libcppdebounce/: debounce.hpp  throttle.hpp
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js
test/: CMakeLists.txt  debounce_test.cpp  throttle_test.cpp
